kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fieldline-operations-service
spec:
  selector:
    app: fieldline-operations
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
